// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<h2
  className="css-86q1h8-finalStyle-Heading"
>
  Heading
</h2>
`;

exports[`renders the component h3 1`] = `
<h3
  className="css-86q1h8-finalStyle-Heading"
>
  Heading
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
<h2
  className="my-extra-class css-86q1h8-finalStyle-Heading"
>
  Heading
</h2>
`;
